desktop and animations

--- a/blog.html
+++ b/blog.html
@@ -84,13 +84,13 @@
                 <div class="col col-12 col-lg-7">
                     <nav class="nav">
                         <ul>
-                            <li><a href="javascript:;">MEDZONE</a></li>
-                            <li><a href="javascript:;">ÜRÜNLER</a></li>
-                            <li><a href="javascript:;">NASIL KULLANILIR</a></li>
-                            <li><a href="javascript:;">BELGELERİMİZ</a></li>
-                            <li><a href="javascript:;">KATALOG</a></li>
-                            <li><a href="javascript:;">BLOG</a></li>
-                            <li><a href="javascript:;">BİZE ULAŞIN</a></li>
+                            <li><a href="medzone.html">MEDZONE</a></li>
+                            <li><a href="products.html">ÜRÜNLER</a></li>
+                            <li><a href="how-is-it-used.html">NASIL KULLANILIR</a></li>
+                            <li><a href="documents.html">BELGELERİMİZ</a></li>
+                            <li><a onclick="window.open('assets/catalog/medzone-katalog.pdf', '_blank')" href="javascript:;">KATALOG</a></li>
+                            <li><a href="blog.html">BLOG</a></li>
+                            <li><a href="contact.html">BİZE ULAŞIN</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -235,23 +235,23 @@
             <div class="row">
                 <div class="col col-12 col-lg-2"></div>
                 <div class="col col-12 col-lg-8">
-                    <div class="logo">
+                    <div class="logo" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <a href="index.html">
                             <img src="assets/images/medzone-logo-footer.png" alt="" />
                         </a>
                     </div>
-                    <h6>MEDZONE <span>SAĞLIK HİZMETLERİ</span></h6>
-                    <p>Dünya standartlarında, çağdaş yenilikleri takip eden ve yeniliklere öncülük eden, diğer sağlık kuruluşları tarafından örnek alınan sağlık kurumu olmak. Yurt içinde ve yurt dışında tüm hastalarımıza en yüksek kalitede ürünler sunmak, hastalarımızın kendilerini güven içinde hissettikleri ve tüm beklentilerinin karşılandığı ,hizmet verdiğimiz tüm insanlara hastalıkta ve sağlıkta yüksek yaşam kalitesi sağlamak.</p>
+                    <h6 data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">MEDZONE <span>SAĞLIK HİZMETLERİ</span></h6>
+                    <p data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">Dünya standartlarında, çağdaş yenilikleri takip eden ve yeniliklere öncülük eden, diğer sağlık kuruluşları tarafından örnek alınan sağlık kurumu olmak. Yurt içinde ve yurt dışında tüm hastalarımıza en yüksek kalitede ürünler sunmak, hastalarımızın kendilerini güven içinde hissettikleri ve tüm beklentilerinin karşılandığı ,hizmet verdiğimiz tüm insanlara hastalıkta ve sağlıkta yüksek yaşam kalitesi sağlamak.</p>
                     <div class="foot-menu">
-                        <a href="javascript:;">MEDZONE</a>
-                        <a href="javascript:;">ÜRÜNLER</a>
-                        <a href="javascript:;">NASIL KULLANILIR</a>
-                        <a href="javascript:;">BELGELERİMİZ</a>
-                        <a href="javascript:;">KATALOG</a>
-                        <a href="javascript:;">BLOG</a>
-                        <a href="javascript:;">BİZE ULAŞIN</a>
+                        <a href="medzone.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">MEDZONE</a>
+                        <a href="products.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">ÜRÜNLER</a>
+                        <a href="how-is-it-used.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">NASIL KULLANILIR</a>
+                        <a href="documents.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">BELGELERİMİZ</a>
+                        <a href="assets/catalog/medzone-katalog.pdf" target="_blank" data-aos="fade-up" data-aos-duration="800" data-aos-delay="500">KATALOG</a>
+                        <a href="blog.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="600">BLOG</a>
+                        <a href="contact.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="700">BİZE ULAŞIN</a>
                     </div>
-                    <div class="signature">
+                    <div class="signature" data-aos="fade-up" data-aos-duration="800" data-aos-delay="800">
                         <a href="javascript:;">
                             <div class="img">
                                 <img src="assets/images/kollektif-karga-logo.png" alt="" />
