--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
                 <div class="col col-12 col-lg-7">
                     <nav class="nav">
                         <ul>
-                            <li><a href="javascript:;">MEDZONE</a></li>
-                            <li><a href="javascript:;">ÜRÜNLER</a></li>
-                            <li><a href="javascript:;">NASIL KULLANILIR</a></li>
-                            <li><a href="javascript:;">BELGELERİMİZ</a></li>
-                            <li><a href="javascript:;">KATALOG</a></li>
-                            <li><a href="javascript:;">BLOG</a></li>
-                            <li><a href="javascript:;">BİZE ULAŞIN</a></li>
+                            <li><a href="medzone.html">MEDZONE</a></li>
+                            <li><a href="products.html">ÜRÜNLER</a></li>
+                            <li><a href="how-is-it-used.html">NASIL KULLANILIR</a></li>
+                            <li><a href="documents.html">BELGELERİMİZ</a></li>
+                            <li><a onclick="window.open('assets/catalog/medzone-katalog.pdf', '_blank')" href="javascript:;">KATALOG</a></li>
+                            <li><a href="blog.html">BLOG</a></li>
+                            <li><a href="contact.html">BİZE ULAŞIN</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -130,7 +130,7 @@
                 </div>
                 <div class="swiper-slide">
                     <div class="img">
-                        <img src="assets/images/slider-img-1.png" alt="" />
+                        <img src="assets/images/slider-img-2.png" alt="" />
                         <div class="container">
                             <div class="row">
                                 <div class="col col-12 col-lg-2"></div>
@@ -333,7 +333,9 @@
                         <img src="assets/images/main-section-2-img-2.png" alt="" />
                     </div>
                 </div>
-                <div class="col col-12 col-lg-2"></div>
+                <div class="col col-12 col-lg-2">
+                    <span class="line"></span>
+                </div>
                 <div class="col col-12 col-lg-5">
                     <div class="text-article" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                         <div class="centered">
@@ -591,11 +593,11 @@
                     <div class="foot-menu">
                         <a href="medzone.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">MEDZONE</a>
                         <a href="products.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">ÜRÜNLER</a>
-                        <a href="javascript:;" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">NASIL KULLANILIR</a>
-                        <a href="javascript:;" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">BELGELERİMİZ</a>
-                        <a href="javascript:;" data-aos="fade-up" data-aos-duration="800" data-aos-delay="500">KATALOG</a>
+                        <a href="how-is-it-used.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">NASIL KULLANILIR</a>
+                        <a href="documents.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">BELGELERİMİZ</a>
+                        <a href="assets/catalog/medzone-katalog.pdf" target="_blank" data-aos="fade-up" data-aos-duration="800" data-aos-delay="500">KATALOG</a>
                         <a href="blog.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="600">BLOG</a>
-                        <a href="javascript:;" data-aos="fade-up" data-aos-duration="800" data-aos-delay="700">BİZE ULAŞIN</a>
+                        <a href="contact.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="700">BİZE ULAŞIN</a>
                     </div>
                     <div class="signature" data-aos="fade-up" data-aos-duration="800" data-aos-delay="800">
                         <a href="javascript:;">
