--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
     <div class="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12030.542921119059!2d28.971031!3d41.0769545!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x91278d270bc3e682!2sMedzone%20Sa%C4%9Fl%C4%B1k%20Hizmetleri%20San%20ve%20Tic%20Ltd%20%C5%9Eti!5e0!3m2!1str!2str!4v1612090865993!5m2!1str!2str" width="100%" height="500" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div><!-- map -->
-    <div class="page-section-1" style="margin-top:-180px">
+    <div class="page-section-1 mt-setting" style="margin-top:-180px">
         <div class="container">
             <div class="bg-white">
                 <div class="row">
