--- a/medzone.html
+++ b/medzone.html
@@ -108,7 +108,7 @@
             <img src="assets/images/medzone-banner-img.png" alt="" />
         </div>
     </div><!-- medzone-banner -->
-    <div class="page-section-1" style="margin-top:-310px">
+    <div class="page-section-1 mt-setting" style="margin-top:-310px">
         <div class="container">
             <div class="bg-white">
                 <div class="row">
@@ -135,27 +135,29 @@
                             <img src="assets/images/medzone-page-1-img.png" alt="" />
                         </div>
                     </div>
-                    <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
-                        <div class="head" style="margin-top:80px;">
-                            <h2>
-                                MEDZONE
-                                <span>MİSYON & AMACIMIZ</span>
-                            </h2>
-                        </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                    <div class="head" style="margin-top:80px;">
+                        <h2>
+                            MEDZONE
+                            <span>MİSYON & AMACIMIZ</span>
+                        </h2>
                     </div>
-                    <div class="col col-12 col-lg-7"></div>
-                    <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
-                        <div class="text-article">
-                            <p><span>Tıbbi etik kurallarına bağlı kalarak, verimli, etkin ve sürdürülebilir sağlık hizmetleri sunmak; güvenilir ürün tedarik süreçleriyle toplumun sağlık ihtiyaçlarını karşılamak ve yaşam kalitesini artırmak.</span></p>
-                        </div>
+                </div>
+                <div class="col col-12 col-lg-7"></div>
+                <div class="col col-12 col-lg-5" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
+                    <div class="text-article">
+                        <p><span>Tıbbi etik kurallarına bağlı kalarak, verimli, etkin ve sürdürülebilir sağlık hizmetleri sunmak; güvenilir ürün tedarik süreçleriyle toplumun sağlık ihtiyaçlarını karşılamak ve yaşam kalitesini artırmak.</span></p>
                     </div>
-                    <div class="col col-12 col-lg-1"></div>
-                    <div class="col col-12 col-lg-6" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
-                        <div class="text-article">
-                            <p>Medzone Sağlık Hizmetleri olarak temel amacımız, insanların yaşam kalitesini yükseltmek ve sağlık ihtiyaçlarına en doğru çözümleri sunmaktır. Bu doğrultuda yenilikçi yaklaşımlar geliştirmeyi, küresel ölçekte değerlerimizi ve çalışmalarımızı sürdürmeyi hedefliyoruz.</p>
-                            <p>Güçlü değerlerimiz kurum kültürümüzü şekillendirir, stratejimizi destekler ve misyonumuz ile vizyonumuzun hayata geçirilmesini sağlar. Güvenilirlik, etik ilkelere bağlılık, yenilikçilik, insan odaklılık ve sürdürülebilirlik temel değerlerimizdir.</p>
-                            <p>Stratejimizin merkezinde bilime dayalı yenilikler yer almaktadır. Bu yaklaşım sayesinde hastalarımıza daha iyi tedavi sonuçları sunmayı ve sağlık hizmetlerinin büyüyen alanlarında liderliği hedefliyoruz.</p>
-                        </div>
+                </div>
+                <div class="col col-12 col-lg-1"></div>
+                <div class="col col-12 col-lg-6" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
+                    <div class="text-article">
+                        <p>Medzone Sağlık Hizmetleri olarak temel amacımız, insanların yaşam kalitesini yükseltmek ve sağlık ihtiyaçlarına en doğru çözümleri sunmaktır. Bu doğrultuda yenilikçi yaklaşımlar geliştirmeyi, küresel ölçekte değerlerimizi ve çalışmalarımızı sürdürmeyi hedefliyoruz.</p>
+                        <p>Güçlü değerlerimiz kurum kültürümüzü şekillendirir, stratejimizi destekler ve misyonumuz ile vizyonumuzun hayata geçirilmesini sağlar. Güvenilirlik, etik ilkelere bağlılık, yenilikçilik, insan odaklılık ve sürdürülebilirlik temel değerlerimizdir.</p>
+                        <p>Stratejimizin merkezinde bilime dayalı yenilikler yer almaktadır. Bu yaklaşım sayesinde hastalarımıza daha iyi tedavi sonuçları sunmayı ve sağlık hizmetlerinin büyüyen alanlarında liderliği hedefliyoruz.</p>
                     </div>
                 </div>
             </div>
