--- a/how-is-it-used.html
+++ b/how-is-it-used.html
@@ -108,9 +108,9 @@
             <img src="assets/images/how-is-it-used-banner.png" alt="" />
         </div>
     </div><!-- medzone-banner -->
-    <div class="page-section-1" style="margin-top:-100px">
+    <div class="page-section-1 mt-setting" style="margin-top:-100px">
         <div class="container">
-            <div class="bg-white">
+            <div class="bg-white pb-80">
                 <div class="img-set">
                     <div class="img-1" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <img src="assets/images/how-is-it-img-2.png" alt="" />
