--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         <article class="text" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                             <p><span>ZoneTAPE silikon bant; burun, meme, karin, bacak bölgelerindeki estetik ameliyatları operasyonları sonrasında kullanılır.</span></p>
                             <p>Ayrıca mide sonrası oluşan kilo kayıplarından kaynaklı karin germe operasyonları sonrasında, tüm cilt ile ilgili cerrahi operasyonlar sonrası deride oluşacak izlerin giderilmesinde önemli bir seçenektir.</p>
-                            <a class="detail-btn" href="javascript:;">
+                            <a class="detail-btn" href="medzone.html">
                                 Detaylı Bilgi
                             </a>
                         </article>
@@ -203,7 +203,7 @@
             <div class="swiper operations-swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <a class="product-card" href="javascript:;" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800">
+                        <a class="product-card" href="products.html" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800">
                             <div class="img">
                                 <img src="assets/images/section-1-slider-img-1.png" alt="" />
                             </div>
@@ -220,7 +220,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a class="product-card" href="javascript:;" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
+                        <a class="product-card" href="products.html" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
                             <div class="img">
                                 <img src="assets/images/section-1-slider-img-1.png" alt="" />
                             </div>
@@ -237,7 +237,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a class="product-card" href="javascript:;" data-aos="fade-up" data-aos-delay="300" data-aos-duration="800">
+                        <a class="product-card" href="products.html" data-aos="fade-up" data-aos-delay="300" data-aos-duration="800">
                             <div class="img">
                                 <img src="assets/images/section-1-slider-img-1.png" alt="" />
                             </div>
@@ -254,7 +254,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a class="product-card" href="javascript:;" data-aos="fade-up" data-aos-delay="400" data-aos-duration="800">
+                        <a class="product-card" href="products.html" data-aos="fade-up" data-aos-delay="400" data-aos-duration="800">
                             <div class="img">
                                 <img src="assets/images/section-1-slider-img-1.png" alt="" />
                             </div>
@@ -271,7 +271,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a class="product-card" href="javascript:;" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800">
+                        <a class="product-card" href="products.html" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800">
                             <div class="img">
                                 <img src="assets/images/section-1-slider-img-1.png" alt="" />
                             </div>
@@ -288,7 +288,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a class="product-card" href="javascript:;" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
+                        <a class="product-card" href="products.html" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
                             <div class="img">
                                 <img src="assets/images/section-1-slider-img-1.png" alt="" />
                             </div>
@@ -311,13 +311,13 @@
     <div class="main-section-1">
         <div class="container">
             <div class="row">
-                <div class="col col-12 col-lg-5">
+                <div class="col col-5">
                     <div class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <img src="assets/images/section-2-img-1.png" alt="" />
                     </div>
                 </div>
-                <div class="col col-12 col-lg-1"></div>
-                <div class="col col-12 col-lg-6">
+                <div class="col col-1"></div>
+                <div class="col col-6">
                     <div class="img" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                         <img src="assets/images/section-2-img-2.png" alt="" />
                     </div>
@@ -349,7 +349,7 @@
                                 <p><span>Zonetape, doğal yapısıyla cilde uyumlu olup hiçbir kimyasal yapıştırıcı içermez. Yüksek ve düşük sıcaklıklarda formunu korur, hava koşullarına, radyasyona, ultraviyole ışınlarına, ozona ve oksijene karşı yüksek dayanıklılık gösterir.</span></p>
                                 <p>Cilt, özellikle cerrahi işlemler sonrasında hassas ve kırılgan bir yapıya bürünür. Zonetape silikon bant, bu dönemde cilde ekstra konfor sağlayarak iyileşme sürecini destekler, izlerin görünümünü azaltmaya yardımcı olur ve daha sağlıklı bir cilt dokusu oluşmasına katkıda bulunur. Etkili sonuçlar elde etmek için bantın düzenli olarak 2 ila 6 ay arası kullanılması önerilir.</p>
                             </article>
-                            <a href="javascript:;" class="detail-btn">
+                            <a href="medzone.html" class="detail-btn">
                                 <span>Detaylı Bilgi</span>
                             </a>
                         </div>
@@ -379,7 +379,7 @@
                         <div class="swiper testimonials-swiper">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <a class="testimonials-card" href="javascript:;" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
+                                    <div class="testimonials-card" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                                         <p>Cilt, özellikle cerrahi işlemler sonrasında hassas ve kırılgan bir yapıya bürünür. Zonetape silikon bant, bu dönemde cilde ekstra konfor sağlayarak iyileşme sürecini destekler, izlerin görünümünü azaltmaya yardımcı olur ve daha sağlıklı bir cilt dokusu oluşmasına katkıda bulunur. Etkili sonuçlar elde etmek için bantın düzenli olarak 2 ila 6 ay arası kullanılması önerilir.</p>
                                         <div class="stars">
                                             <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -398,51 +398,7 @@
                                                 <path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="currentColor"/>
                                             </svg>
                                         </div>
-                                    </a>
-                                </div>
-                                <div class="swiper-slide">
-                                    <a class="testimonials-card" href="javascript:;" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
-                                        <p>Cilt, özellikle cerrahi işlemler sonrasında hassas ve kırılgan bir yapıya bürünür. Zonetape silikon bant, bu dönemde cilde ekstra konfor sağlayarak iyileşme sürecini destekler, izlerin görünümünü azaltmaya yardımcı olur ve daha sağlıklı bir cilt dokusu oluşmasına katkıda bulunur. Etkili sonuçlar elde etmek için bantın düzenli olarak 2 ila 6 ay arası kullanılması önerilir.</p>
-                                        <div class="stars">
-                                            <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="currentColor"/>
-                                            </svg>
-                                            <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="currentColor"/>
-                                            </svg>
-                                            <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="currentColor"/>
-                                            </svg>
-                                            <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="currentColor"/>
-                                            </svg>
-                                            <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="currentColor"/>
-                                            </svg>
-                                        </div>
-                                    </a>
-                                </div>
-                                <div class="swiper-slide">
-                                    <a class="testimonials-card" href="javascript:;" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
-                                        <p>Cilt, özellikle cerrahi işlemler sonrasında hassas ve kırılgan bir yapıya bürünür. Zonetape silikon bant, bu dönemde cilde ekstra konfor sağlayarak iyileşme sürecini destekler, izlerin görünümünü azaltmaya yardımcı olur ve daha sağlıklı bir cilt dokusu oluşmasına katkıda bulunur. Etkili sonuçlar elde etmek için bantın düzenli olarak 2 ila 6 ay arası kullanılması önerilir.</p>
-                                        <div class="stars">
-                                            <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="currentColor"/>
-                                            </svg>
-                                            <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="currentColor"/>
-                                            </svg>
-                                            <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="currentColor"/>
-                                            </svg>
-                                            <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="currentColor"/>
-                                            </svg>
-                                            <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <path d="M10 0L12.2451 6.90983H19.5106L13.6327 11.1803L15.8779 18.0902L10 13.8197L4.12215 18.0902L6.36729 11.1803L0.489435 6.90983H7.75486L10 0Z" fill="currentColor"/>
-                                            </svg>
-                                        </div>
-                                    </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -521,8 +477,8 @@
     <div class="main-section-3">
         <div class="container">
             <div class="row">
-                <div class="col col-12 col-lg-1"></div>
-                <div class="col col-12 col-lg-7" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
+                <div class="col col-12 col-md-1 col-lg-1"></div>
+                <div class="col col-12 col-md-6 col-lg-7" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                     <div class="text-set">
                         <div class="row row-align">
                             <div class="col col-12 col-lg-5">
@@ -534,7 +490,7 @@
                             <div class="col col-12 col-lg-7">
                                 <div class="text-2">
                                     <p>Cerrahi operasyonlar, estetik işlemler veya cilt yaralanmaları sonrası en sık karşılaşılan sorunlardan biri skar ve keloid izleridir. Bu izler, hem estetik açıdan rahatsızlık verebilir hem de cildin doğal görünümünü bozabilir.</p>
-                                    <a href="javascript:;" class="detail-btn">
+                                    <a href="blog.html" class="detail-btn">
                                         <span>Blog Yazılarımız</span>
                                     </a>
                                 </div>
@@ -542,8 +498,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-12 col-lg-3" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
-                    <a href="javascript:;" class="text-3">
+                <div class="col col-12 col-md-4 col-lg-3" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
+                    <a href="assets/catalog/medzone-katalog.pdf" class="text-3">
                         <div class="icon">
                             <img src="assets/images/main-section-3-icon-1.png" alt="" />
                         </div>
@@ -556,10 +512,10 @@
                         </div>
                     </a>
                 </div>
-                <div class="col col-12 col-lg-1"></div>
-                <div class="col col-12 col-lg-1"></div>
-                <div class="col col-12 col-lg-3" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
-                    <a href="javascript:;" class="img">
+                <div class="col col-12 col-md-1 col-lg-1"></div>
+                <div class="col col-12 col-md-1"></div>
+                <div class="col col-12 col-md-3" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
+                    <a href="assets/catalog/medzone-katalog.pdf" class="img" target="_blank">
                         <img src="assets/images/main-section-3-img-1.png" alt="" />
                         <div class="arrow">
                             <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -568,13 +524,12 @@
                         </div>
                     </a>
                 </div>
-                <div class="col col-12 col-lg-7" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
-                    <a href="javascript:;" class="img">
+                <div class="col col-12 col-md-7" data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">
+                    <a href="assets/catalog/medzone-katalog.pdf" class="img" target="_blank">
                         <img src="assets/images/main-section-3-img-2.png" alt="" />
                     </a>
                 </div>
-                <div class="col col-12 col-lg-1"></div>
-
+                <div class="col col-12 col-md-1"></div>
             </div>
         </div>
     </div><!-- main-section-3 -->
@@ -600,7 +555,7 @@
                         <a href="contact.html" data-aos="fade-up" data-aos-duration="800" data-aos-delay="700">BİZE ULAŞIN</a>
                     </div>
                     <div class="signature" data-aos="fade-up" data-aos-duration="800" data-aos-delay="800">
-                        <a href="javascript:;">
+                        <a href="http://kolektifkarga.com/" target="_blank">
                             <div class="img">
                                 <img src="assets/images/kollektif-karga-logo.png" alt="" />
                             </div>
