--- a/products.html
+++ b/products.html
@@ -151,7 +151,7 @@
     </div><!-- product-logos -->
     <div class="page-section-1">
         <div class="container">
-            <div class="bg-white">
+            <div class="bg-white non-shadow pt-0">
                 <div class="row">
                     <div class="col col-12 col-lg-1"></div>
                     <div class="col col-12 col-lg-10">
