--- a/how-is-it-used.html
+++ b/how-is-it-used.html
@@ -110,7 +110,7 @@
     </div><!-- medzone-banner -->
     <div class="page-section-1 mt-setting" style="margin-top:-100px">
         <div class="container">
-            <div class="bg-white pb-80">
+            <div class="bg-white pb-80 non-shadow">
                 <div class="img-set">
                     <div class="img-1" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                         <img src="assets/images/how-is-it-img-2.png" alt="" />
