--- a/documents.html
+++ b/documents.html
@@ -135,7 +135,7 @@
     <div class="documents-section">
         <div class="container">
             <div class="row">
-                <div class="col col-12 col-lg-4">
+                <div class="col col-12 col-lg-4" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                     <div class="item">
                         <div class="img">
                             <img src="assets/images/fda.png" alt="">
@@ -148,7 +148,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-12 col-lg-4">
+                <div class="col col-12 col-lg-4" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                     <div class="item">
                         <div class="img">
                             <img src="assets/images/ce.png" alt="" />
@@ -161,7 +161,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col col-12 col-lg-4">
+                <div class="col col-12 col-lg-4" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
                     <div class="item">
                         <div class="img">
                             <img src="assets/images/uts.png" alt="" />
@@ -177,7 +177,7 @@
                 <div class="swiper documents-swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <div class="pdf-item">
+                            <div class="pdf-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                                 <a href="assets/catalog/fda.pdf" target="_blank">
                                     <img src="assets/images/document-fda.jpg" alt="" />
                                     <span class="icon">
@@ -187,7 +187,7 @@
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            <div class="pdf-item">
+                            <div class="pdf-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                                 <a href="assets/catalog/declaration.pdf" target="_blank">
                                     <img src="assets/images/document-ce.jpg" alt="" />
                                     <span class="icon">
@@ -197,7 +197,7 @@
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            <div class="pdf-item">
+                            <div class="pdf-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
                                 <a href="assets/catalog/iso.pdf" target="_blank">
                                     <img src="assets/images/document-iso.jpg" alt="" />
                                     <span class="icon">
@@ -207,7 +207,7 @@
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            <div class="pdf-item">
+                            <div class="pdf-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="100">
                                 <a href="assets/catalog/fda.pdf" target="_blank">
                                     <img src="assets/images/document-fda.jpg" alt="" />
                                     <span class="icon">
@@ -217,7 +217,7 @@
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            <div class="pdf-item">
+                            <div class="pdf-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="200">
                                 <a href="assets/catalog/declaration.pdf" target="_blank">
                                     <img src="assets/images/document-ce.jpg" alt="" />
                                     <span class="icon">
@@ -227,7 +227,7 @@
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            <div class="pdf-item">
+                            <div class="pdf-item" data-aos="fade-up" data-aos-duration="800" data-aos-delay="300">
                                 <a href="assets/catalog/iso.pdf" target="_blank">
                                     <img src="assets/images/document-iso.jpg" alt="" />
                                     <span class="icon">
